# This automake file generates the Makefile to build CUDA support into GPTL
# Jim Rosinski 11/3/19

# This directory stores libtool macros, put there by aclocal.
ACLOCAL_AMFLAGS = -I m4

# This is the list of subdirs for which Makefiles will be constructed
# and run.
SUBDIRS = include src tests

install-data-hook:
